tests/baselines/reference/systemModuleAmbientDeclarations(strict=true).errors.txt
file2.ts(1,25): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== file1.ts (0 errors) ====
    declare class Promise { }
    declare function Foo(): void;
    declare class C {}
    declare enum E {X = 1};
    
    export var promise = Promise;
    export var foo = Foo;
    export var c = C;
    export var e = E;
    
==== file2.ts (1 errors) ====
    export declare function foo();
                            ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    
==== file3.ts (0 errors) ====
    export declare class C {}
    
==== file4.ts (0 errors) ====
    export declare var v: number;
    
==== file5.ts (0 errors) ====
    export declare enum E {X = 1}
    
==== file6.ts (0 errors) ====
    export declare module M { var v: number; }
    